<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false"><xliff:g>Presenter</xliff:g></string>

    <!-- Main menu -->
    <string name="connect_via_bluetooth">Connect via bluetooth</string>
    <string name="connect_via_wifi">Connect via wifi</string>
    <string name="settings">Settings</string>

    <!-- SettingsActivity -->
    <string name="disable_audio">Silence device during presentation</string>
    <string name="navigate_using_volume_keys">Use volume keys for navigation</string>

    <!-- General presenter -->
    <string name="title_device_selector">Please select device to control</string>
    <string name="connecting_to_service">Connecting to presenter service. Please wait…</string>
    <string name="parsing_error">Error while parsing data from server.</string>
    <string name="connection_lost">Lost connection to presenter service.</string>
    <string name="incompatible_server_version">Incompatible server version detected. Please make sure both app and server are up to date.</string>
    <string name="next_slide">Next Slide</string>
    <string name="prev_slide">Previous Slide</string>
    <string name="stop_presentation">Stop Presentation</string>
    <string name="start_presentation">Start Presentation</string>

    <!-- Bluetooth presenting -->
    <string name="bluetooth_not_available">Bluetooth is not available</string>
    <string name="bluetooth_required_leaving">Bluetooth is required to allow remote control. Returning to main menu…</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_already_paired_devices">Already Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for more devices</string>
    <string name="button_rescan">Rescan for devices</string>
    <string name="bluetooth_connected">Connected to: %s</string>
    <string name="bluetooth_not_connected">Bluetooth connection failed. Make sure that you started the server on your pc before you try to connect.</string>

    <!-- Wifi presenting -->
    <string name="wifi_not_available">Wifi is not available</string>
    <string name="wifi_required_leaving">Wifi is required to allow remote control. Returning to main menu…</string>
    <string name="title_broadcasting_devices">Remote presenter server</string>
    <string name="manual_connection">Connect manually</string>
    <string name="manual_config_presenter_name">Server Name (optional)</string>
    <string name="manual_config_ip_address">IP Address</string>
    <string name="manual_config_connect">Connect</string>
    <string name="manual_config_no_ip">Please provide an ip address to connect to</string>
    <string name="wifi_connected">Connected to: %s</string>
    <string name="wifi_not_connected">Wifi connection failed. Make sure that you started the server on your pc before you try to connect.</string>

    <!-- About menu -->
    <string name="about">About %s</string>
    <string name="version">Version: %s</string>
    <string name="copyright">Copyright © <xliff:g id="author_name">Felix Wohlfrom</xliff:g></string>
    <string name="license">This app is licensed under <a href="https://www.gnu.org/licenses/gpl-3.0.txt">GNU GPLv3</a>.\nIcon by <a href="https://www.iconfinder.com/icons/473643/computer_desktop_device_hardware_monitor_pc_server_icon">Maxim Basinski</a>.</string>
    <string name="howto">You need a server software to properly use this app. Please check <a href="https://github.com/FelixWohlfrom/Presenter-Server">https://github.com/FelixWohlfrom/Presenter-Server</a> on how to download the server and execute it on your controlled system.</string>
    <string name="app_icon_description">App icon</string>
    <!-- Escape html tags to allow formatting and variables in the same string -->
    <string name="protocol_version">Supported version of &lt;a href="https://github.com/FelixWohlfrom/Presenter-Protocol"&gt;presenter protocol&lt;/a&gt;:&lt;br /&gt;Minimum: %1d&lt;br /&gt;Maximum: %2d</string>
</resources>
