<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="de.wohlfrom.presenter.MainActivity">

    <Button
        android:id="@+id/connect_via_wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/connect_via_wifi" />

    <Button
        android:id="@+id/connect_via_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/connect_via_wifi"
        android:text="@string/connect_via_bluetooth" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_via_wifi"
        android:text="@string/settings" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings" />
</RelativeLayout>
