<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".connectors.bluetooth.DeviceSelector">

    <TextView
        android:id="@+id/title_already_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333"
        android:padding="5dp"
        android:text="@string/title_already_paired_devices"
        android:textColor="#fff"
        android:visibility="gone" />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:layout_height="0dp"
        />

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333"
        android:padding="5dp"
        android:text="@string/title_other_devices"
        android:textColor="#fff"
        android:visibility="gone"
        />

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:visibility="gone"
        />

    <ProgressBar
        android:id="@+id/device_scanning_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scan"
        />
</LinearLayout>