<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="true"
    android:layout_centerVertical="false"
    tools:context="de.wohlfrom.presenter.AboutActivity">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0"
        android:padding="15dp"
        android:src="@mipmap/launcher" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="1"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appVersionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="2" />

    <TextView
        android:id="@+id/authorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="3" />

    <TextView
        android:id="@+id/license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="4"
        android:text="@string/license" />

    <TextView
        android:id="@+id/howto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="5"
        android:text="@string/howto" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_row="6"/>
</GridLayout>
